--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,12 @@
 title: >
-    Le Pata Negra un produit gastronomique exceptionnel
+    Le Pata Negra
 email: >
     your-email@domain.com
 description: >
-    Blog sur le jambon pata negra ou le jambon ibérique, l'un des produits les plus célèbres de la gastronomie mondiale. Avec ce blog, nous souhaitons présenter tout ce qui concerne ce produit espagnol. Nous allons passer en revue tous les restaurants à Paris où vous pouvez trouver ce produit exceptionnel. Recettes, types et qualités, astuces pour la consommation et la conservation du jambon pata negra
+    Blog sur le jambon pata negra ou le jambon ibérique, l'un des produits les plus célèbres de la gastronomie mondiale.
+ Avec ce blog, nous souhaitons présenter tout ce qui concerne ce produit espagnol.
+ Nous allons passer en revue tous les restaurants à Paris où vous pouvez trouver ce produit exceptionnel.
+ Recettes, types et qualités, astuces pour la consommation et la conservation du jambon pata negra
 
 baseurl: "/"
 url: http://keralahost.in/patanegra
