--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@ google_adsense: Your-adsense-code
 markdown: kramdown
 
 name: >
-    Le Pata Negra un produit gastronomique exceptionnel
-
+    Le Pata Negra
 date: 2019-03-15 11:18:32 +0000
 permalink: /:year/:month/:day/:title
 
