--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Le Pata Negra
 email: your-email@domain.com
-description: >
+description: 
   Blog sur le jambon pata negra ou le jambon ibérique, l'un des produits les plus célèbres de la gastronomie mondiale.
  Avec ce blog, nous souhaitons présenter tout ce qui concerne ce produit espagnol.
 baseurl: "/"
